[project]
name = "data-analytics-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kskkrt", email = "kskkrt0326@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "polars>=0.19.19",
    "matplotlib>=3.7.4",
    "japanize-matplotlib>=1.1.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.0",
    "catboost>=1.2.2",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.2",
    "gensim>=4.3.2",
    "wandb>=0.16.1",
    "hydra-core>=1.3.2",
    "optuna>=3.4.0",
    "lime>=0.2.0.1",
    "pulp>=2.7.0",
    "pymc>=5.6.1",
    "pytensor>=2.13.1",
    "shap>=0.43.0",
    "umap-learn>=0.5.5",
    "omegaconf>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.7.1",
    "black>=23.11.0",
    "ruff>=0.1.7",
    "pytest>=7.4.3",
    "jupyterlab>=4.0.9",
]

[tool.hatch.metadata]
allow-direct-references = true
